--- a/fpst/test/fetch-mem-usage.html
+++ b/fpst/test/fetch-mem-usage.html
@@ -4,11 +4,16 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <title>flv.js Fetch Memory Usage Test</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="../../dist/flv-tests.js"></script>
 </head>
 
 <body>
-    
-    
+    <p>Запущено: <span id="started"/></p>
+    <script>
+      $('#started').text(new Date().toLocaleString());
+      console.log(flvjs);
+    </script>
 </body>
 
 </html>
